<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ymScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/readme_padding_horizontal"
    android:paddingTop="36dp"
    android:paddingBottom="48dp"
    android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
    android:scrollbars="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ym_title"
            android:textColor="@color/readme_text"
            android:textSize="@dimen/readme_h2_size" />

        <TextView
            android:id="@+id/ymRunStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ym_stopped"
            android:textColor="@color/ym_error"
            android:textSize="@dimen/field_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/ym_hint"
            android:textColor="@color/menu_header_version"
            android:textSize="@dimen/field_label_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ymStartNotice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:maxLines="2"
                    android:minHeight="20dp"
                    android:textSize="@dimen/ym_notice_size" />

                <TextView
                    android:id="@+id/ymStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_field_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:minHeight="@dimen/field_min_height"
                    android:paddingHorizontal="16dp"
                    android:text="@string/ym_start"
                    android:textColor="@color/readme_text"
                    android:textSize="@dimen/field_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ymRestartNotice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:maxLines="2"
                    android:minHeight="20dp"
                    android:textSize="@dimen/ym_notice_size" />

                <TextView
                    android:id="@+id/ymRestart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_field_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:minHeight="@dimen/field_min_height"
                    android:paddingHorizontal="16dp"
                    android:text="@string/ym_restart"
                    android:textColor="@color/readme_text"
                    android:textSize="@dimen/field_text_size" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/ymStopNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:minHeight="20dp"
            android:textSize="@dimen/ym_notice_size" />

        <TextView
            android:id="@+id/ymStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_field_background"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical|start"
            android:minHeight="@dimen/field_min_height"
            android:paddingHorizontal="24dp"
            android:text="@string/ym_stop"
            android:textColor="@color/readme_text"
            android:textSize="@dimen/field_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ym_link"
            android:textColor="@color/line"
            android:textSize="@dimen/field_label_size" />

        <EditText
            android:id="@+id/ymLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="username"
            android:background="@drawable/edit_field_background"
            android:fontFamily="sans-serif"
            android:hint="@string/ym_link_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minHeight="@dimen/field_min_height"
            android:paddingHorizontal="16dp"
            android:textColor="@color/readme_text"
            android:textColorHint="@color/field_hint"
            android:textSize="@dimen/field_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/ym_send_hint"
            android:textColor="@color/menu_header_version"
            android:textSize="@dimen/field_label_size" />

        <TextView
            android:id="@+id/ymSendNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:minHeight="20dp"
            android:textSize="@dimen/ym_notice_size" />

        <TextView
            android:id="@+id/ymSendLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_field_background"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical|start"
            android:minHeight="@dimen/field_min_height"
            android:paddingHorizontal="24dp"
            android:text="@string/ym_send_log"
            android:textColor="@color/readme_text"
            android:textSize="@dimen/field_text_size" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
